# platform_frameworks_base

./: .clang-format  .directory  .gitignore  .mailmap  1  @  ACTIVITY_MANAGER_OWNERS  ACTIVITY_SECURITY_OWNERS  ADPF_OWNERS  AconfigFlags.bp  Android.bp  Android.mk  ApiDocs.bp  BAL_OWNERS  BATTERY_STATS_OWNERS  BROADCASTS_OWNERS  Blueprints  CleanSpec.mk  DREAM_MANAGER_OWNERS  FF_LEADS_OWNERS  GAME_MANAGER_OWNERS  INPUT_OWNERS  INTENT_OWNERS  LSE_APP_COMPAT_OWNERS  MEMORY_OWNERS  METADATA  MULTIUSER_OWNERS  NOTICE  OOM_ADJUSTER_OWNERS  OWNERS  OWNERS.md  PACKAGE_MANAGER_OWNERS  PERFORMANCE_OWNERS  PREUPLOAD.cfg  PREUPLOAD_OWNERS  ProtoLibraries.bp  README.md  Ravenwood.bp  SDK_OWNERS  SECURITY_STATE_OWNERS  (+28 more)
.prebuilt_info/: OWNERS  prebuilt_info_packages_CtsShim_apk__arm_CtsShimPriv_apk.asciipb  prebuilt_info_packages_CtsShim_apk__arm_CtsShim_apk.asciipb  prebuilt_info_packages_CtsShim_apk__riscv64_CtsShimPriv_apk.asciipb  prebuilt_info_packages_CtsShim_apk__riscv64_CtsShim_apk.asciipb  prebuilt_info_packages_CtsShim_apk__x86_CtsShimPriv_apk.asciipb  prebuilt_info_packages_CtsShim_apk__x86_CtsShim_apk.asciipb
android-sdk-flags/: Android.bp  OWNERS  flags.aconfig
apex/: Android.bp  OWNERS
api/: 13.txt  14.txt  15.txt  16.txt  17.txt  Android.bp  Android.mk  (+29 more)
tools/codegen/: Android.bp  BUILD.bazel  OWNERS  manifest.txt
tools/codegen/src/com/android/codegen/: ClassInfo.kt  ClassPrinter.kt  ConstDef.kt  Debug.kt  FeatureFlag.kt  FieldInfo.kt  FileInfo.kt  Generators.kt  ImportsProvider.kt  InputSignaturesComputation.kt  Main.kt  Printer.kt  SharedConstants.kt  Utils.kt
(+65472 files in other folders)
